--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -17,7 +17,7 @@
             android:layout_height="200dp"
             android:layout_centerInParent="true"
             android:contentDescription="@string/splash_logo"
-            android:src="@drawable/splash_logo" />
+            android:src="@drawable/logo" />
 
     </RelativeLayout>
 
