--- a/app/src/main/res/layout/new_task.xml
+++ b/app/src/main/res/layout/new_task.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
-        android:layout_width="395dp"
+        android:layout_width="match_parent"
         android:layout_height="290dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -16,25 +16,27 @@
         <EditText
             android:id="@+id/editTextNewTask"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
             android:autofillHints="@null"
             android:background="@null"
             android:hint="@string/new_task"
             android:inputType="text"
+            android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
         <Button
             android:id="@+id/buttonNewTask"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/editTextNewTask"
+            android:layout_below="@+id/editTextNewTask"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="296dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="11dp"
-            android:layout_marginBottom="203dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="150dp"
+            android:layout_marginEnd="150dp"
+            android:layout_marginBottom="178dp"
             android:background="@android:color/transparent"
             android:text="@string/save"
             android:textColor="@android:color/darker_gray"
